--- a/01-basics/01-CounterButtonApp/index.html
+++ b/01-basics/01-CounterButtonApp/index.html
@@ -8,6 +8,6 @@
     <div id="app">
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
